[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enex2notion2026"
version = "1.0.0"
description = "Import Evernote ENEX files to Notion"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "CameronBeeler", email = "cameron.beeler@icloud.com"}
]
keywords = ["evernote", "notion", "enex", "import", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/CameronBeeler/enex2notion"
Repository = "https://github.com/CameronBeeler/enex2notion"
Issues = "https://github.com/CameronBeeler/enex2notion/issues"

[project.scripts]
enex2notion = "enex2notion.cli:main"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
